// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test badge component basic use should render 1`] = `
<DocumentFragment>
  <div
    class="speed-avatar speed-badge"
    style="width: 30px; height: 30px; border-radius: none;"
  >
    <div>
      U
    </div>
    <div
      class="speed-badge-numDot"
      style="width: 15px; color: red; height: 15px; right: -7.5px; top: -7.5px;"
    >
      1
    </div>
  </div>
  <div
    class="speed-avatar speed-badge"
    style="width: 30px; height: 30px; border-radius: none;"
  >
    <div>
      U
    </div>
    <div
      class="speed-badge-numDot"
      style="width: 15px; color: red; height: 15px; right: -7.5px; top: -7.5px;"
    >
      0
    </div>
  </div>
  <div
    class="speed-avatar speed-badge"
    style="width: 30px; height: 30px; border-radius: none;"
  >
    <div>
      U
    </div>
    <div
      class="speed-badge-numDot"
      style="width: 20px; color: red; height: 20px; right: -10px; top: -10px; background: green;"
    >
      10
    </div>
  </div>
</DocumentFragment>
`;

exports[`test badge component different tag should render 1`] = `
<DocumentFragment>
  <div
    class="speed-avatar speed-badge"
    style="width: 30px; height: 30px; border-radius: none;"
  >
    <div>
      U
    </div>
    <div
      class="speed-badge-numDot"
      style="width: 5px; color: red; height: 5px; right: -2.5px; top: -2.5px;"
    />
  </div>
  <div
    class="speed-avatar speed-badge"
    style="width: 30px; height: 30px; border-radius: none;"
  >
    <div>
      U
    </div>
    <div
      class="speed-badge-numDot"
      style="width: 10px; color: red; height: 10px; right: -5px; top: -5px;"
    />
  </div>
  <div
    class="speed-avatar speed-badge"
    style="width: 30px; height: 30px; border-radius: none;"
  >
    <div>
      U
    </div>
    <div
      class="speed-badge-numDot"
      style="width: 15px; color: red; height: 15px; right: -7.5px; top: -7.5px;"
    />
  </div>
</DocumentFragment>
`;
